k8s/openliberty/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openliberty
spec:
  selector:
    matchLabels:
      app: openliberty
  replicas: 1
  template:
    metadata:
      labels:
        app: openliberty
    spec:
      containers:
        - name: openliberty
          image: otel-ol
          ports:
            - containerPort: 9080
