k8s/openliberty/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openliberty
spec:
  selector:
    app: openliberty
  ports:
    - name: http
      port: 9080
      targetPort: 9080
